--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -84,7 +84,7 @@
                             Batches
                         </a>
                     </li>
-                    <li id="li_accounts">
+                    <!-- <li id="li_accounts">
                         <a href="#">
                             <i class="metismenu-icon pe-7s-users"></i>
                             Accounts
@@ -110,7 +110,7 @@
                                 </a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                 {% endif %}
                 
                 {% if current_user.role.name in ['Admin', 'Secretary', 'Partner'] %}
