feat: 9b37b844231b47edbc6b5d26fe11daf7

--- a/app/admin/templates/admin/admin_edit.html
+++ b/app/admin/templates/admin/admin_edit.html
@@ -233,8 +233,8 @@
 
 
 {% block inner_footer %}
-<div class="app-footer-left">
+<!-- <div class="app-footer-left">
     <button form="edit_form" type="submit" class="btn btn-primary" style="margin-right: 10px;">Save</button>
     <button type="button" class="btn btn-secondary" onclick="history.back(-1)">Cancel</button>
-</div>
+</div> -->
 {% endblock %}
