--- a/app/auth/templates/auth/users/users.html
+++ b/app/auth/templates/auth/users/users.html
@@ -106,15 +106,38 @@
                 {
                     "targets": 4,
                     "className": "text-center",
-                    "render": function (data, type, row) {
+                    "render": function(data, type, row){
                         if (data) {
-                            return `<div class="badge badge-success">Approved</div>`
+                            return `<div class="badge badge-success">Yes</div>`
+                        } else {
+                            return `<div class="badge badge-danger">No</div>`
                         }
-                        return `<div class="badge badge-danger">Not Approved</div>`
                     }
                 },
                 {
                     "targets": 5,
+                    "className": "text-center",
+                    "render": function(data, type, row){
+                        if (data) {
+                            return `<div class="badge badge-success">Yes</div>`
+                        } else {
+                            return `<div class="badge badge-danger">No</div>`
+                        }
+                    }
+                },
+                {
+                    "targets": 6,
+                    "className": "text-center",
+                    "render": function (data, type, row) {
+                        if (data) {
+                            return `<div class="badge badge-success">Approved</div>`
+                        } else {
+                            return `<div class="badge badge-danger">Not Approved</div>`
+                        }
+                    }
+                },
+                {
+                    "targets": 7,
                     "className": "text-center",
                     "render": function (data, type, row) {
                         if (!data) {
@@ -182,8 +205,6 @@
 
         $("#tbl_user_status tbody").on('click', '.btn-decline', function () {
             var data = dtbl_user_status.row($(this).parents('tr')).data();
-
-            console.log(data[0]);
 
             $.confirm({
                 title: 'User Approval',
@@ -320,6 +341,8 @@
                                     <th class="text-center">EMPLOYEE ID</th>
                                     <th>NAME</th>
                                     <th class="text-center">POSITION</th>
+                                    <th class="text-center">IS EMPLOYEE?</th>
+                                    <th class="text-center">IS TEACHER?</th>
                                     <th class="text-center">STATUS</th>
                                     <th class="text-center">ACTIONS</th>
                                 </tr>
