update: full payment book 2 and id card/lace added

--- a/prime_admin/templates/lms/registration.html
+++ b/prime_admin/templates/lms/registration.html
@@ -68,7 +68,7 @@
     
                 $('#book_none').prop('checked', false);
                 $('#book1').prop('checked', true);
-                $('#book2').prop('checked', false);
+                $('#book2').prop('checked', true);
     
                 $("#uniform_m").prop("checked", true);
     
@@ -114,7 +114,7 @@
     
                 $('#book_none').prop('checked', false);
                 $('#book1').prop('checked', true);
-                $('#book2').prop('checked', false);
+                $('#book2').prop('checked', true);
     
                 $("#uniform_m").prop("checked", true);
     
