--- a/prime_admin/templates/lms/student_records.html
+++ b/prime_admin/templates/lms/student_records.html
@@ -610,12 +610,12 @@
                         $("#new_amount").prop('readonly', true);
                         $('#book_none').prop('checked', false);
                         $('#book1').prop('checked', true);
-                        $('#book2').prop('checked', false);
+                        $('#book2').prop('checked', true);
 
                         $("#uniform_m").prop("checked", true);
 
-                        $('#id_card').prop('checked', false);
-                        $('#id_lace').prop('checked', false);
+                        $('#id_card').prop('checked', true);
+                        $('#id_lace').prop('checked', true);
                         $('#reading').prop('checked', false);
                         $('#listening').prop('checked', false);
             
