feat: SNPL Fee added

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -41,6 +41,7 @@
                                             <option value="Business Permit">Business Permit</option>
                                             <option value="Employee Benefits">Employee Benefits</option>
                                             <option value="Bookeeper Retainer Fee">Bookeeper's Retainers Fee</option>
+                                            <option value="SNPL Fee">SNPL Fee</option>
                                         </select>
                                     </div>
                                 </div>
