--- a/prime_admin/templates/lms/student_supplies_page.html
+++ b/prime_admin/templates/lms/student_supplies_page.html
@@ -11,6 +11,14 @@
 
 {% block scripts %}
 <script>
+    $.ajaxSetup({
+        beforeSend: function (xhr, settings) {
+            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", CSRF_TOKEN);
+            }
+        }
+    });
+
     $(document).ready(function () {
         $("#li_student_supplies").addClass('mm-active');
 
@@ -69,6 +77,15 @@
                         <button type="button" class="btn-inbound btn btn-info btn-sm btn-view" data-toggle="modal" data-target="#mdl_inbound"><i class="pe-7s-download btn-icon-wrapper"> </i></button>
                         `
                     }
+                },
+                {
+                    'targets': 35,
+                    "className": "text-center",
+                    'render': function(data, row, type){
+                        return `
+                        <button type="button" class="btn-deposit btn btn-info btn-sm"><i class="pe-7s-next btn-icon-wrapper"> </i></button>
+                        `
+                    }
                 }
             ],
         });
@@ -77,11 +94,6 @@
             var data = dtbl_summaries.row( $(this).parents('tr') ).data();
 
             $("#supply_id").val(data[0]);
-        });
-
-        $('#tbl_summaries tbody').on('click', '.btn-outbound', function () {
-            var data = dtbl_summaries.row( $(this).parents('tr') ).data();
-            $("#outbound_supply_id").val(data[0]);
         });
 
         $("#filter_year").change(function(){
@@ -109,7 +121,42 @@
             dtbl_supplies.ajax.reload();
             dtbl_summaries.ajax.reload();
         });
-    });
+
+        $('#tbl_summaries tbody').on('click', '.btn-deposit',function(){
+            var data = dtbl_summaries.row( $(this).parents('tr') ).data();
+            var supplyId = data[0];
+
+            swal({
+                title: `Deposit stocks?`,
+                text: "Stocks from reserve will move to remaining",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "Confirm!",
+                closeOnConfirm: false,
+                showLoaderOnConfirm: true
+            }, function(){
+                setTimeout(function () {
+                    $.ajax({
+                        type: "POST",
+                        url: "/learning-management/deposit-stocks",
+                        dataType: "json",
+                        data: JSON.stringify({
+                            'supply_id': supplyId
+                        }),
+                        contentType: "application/json; charset=utf-8",
+                        success: function (response) {
+                            dtbl_summaries.ajax.reload();
+                            swal("Success!", response.message, "success");
+                        },
+                        error: function (data) {
+                            swal(data.responseJSON.message, "Please refresh the page then try again!", "error");
+                        },
+                    });
+                }, 500);
+            });
+        });
+    }); // Document.ready
 </script>
 {% endblock %}
 
@@ -136,7 +183,7 @@
                     {% if session['permissions'][RENDERED_MODEL.__amname__]['create'] or current_user.is_superuser %}
             
                         {% if TABLE_OPTIONS['create_modal'] %}
-                            <button type="button" data-toggle="modal" data-target="#create_modal" title="Create new" data-placement="bottom"
+                            <button disabled type="button" data-toggle="modal" data-target="#create_modal" title="Create new" data-placement="bottom"
                                     class="btn-shadow mr-3 btn btn-primary">
                                 {% if RENDERED_MODEL.__amname__ == 'user' %}
                                 <i class="fa fa-user-plus"></i>
@@ -247,6 +294,39 @@
         </div>
         <div class="mb-12 card">
             <div class="card-body">
+                <div class="form-row">
+                    <div class="col-md-1 col-xs-1">
+                        <div class="position-relative form-group">
+                            <label for="filter_year" class="">Year</label>
+                            <select id="filter_year" class="form-control" required>
+                                <option value="all">All</option>
+                                <option value="2023">2023</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-1 col-xs-2">
+                        <div class="position-relative form-group">
+                            <label for="filter_month" class="">Month</label>
+                            <select id="filter_month" class="form-control" required>
+                                <option value="all">All</option>
+                                <option value="1">Jan</option>
+                                <option value="2">Feb</option>
+                                <option value="3">Mar</option>
+                                <option value="4">Apr</option>
+                                <option value="5">May</option>
+                                <option value="6">Jun</option>
+                                <option value="7">Jul</option>
+                                <option value="8">Aug</option>
+                                <option value="9">Sep</option>
+                                <option value="10">Oct</option>
+                                <option value="11">Nov</option>
+                                <option value="12">Dec</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
                 <ul class="tabs-animated-shadow nav-justified tabs-animated nav">
                     <li class="nav-item">
                         <a role="tab" class="nav-link show active" id="tab-c1-0" data-toggle="tab"
@@ -263,39 +343,6 @@
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane show active" id="tab-animated1-0" role="tabpanel">
-                        <div class="form-row">
-                            <div class="col-md-1 col-xs-1">
-                                <div class="position-relative form-group">
-                                    <label for="filter_year" class="">Year</label>
-                                    <select id="filter_year" class="form-control" required>
-                                        <option value="all">All</option>
-                                        <option value="2023">2023</option>
-                                        <option value="2022">2022</option>
-                                        <option value="2021">2021</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-md-1 col-xs-2">
-                                <div class="position-relative form-group">
-                                    <label for="filter_month" class="">Month</label>
-                                    <select id="filter_month" class="form-control" required>
-                                        <option value="all">All</option>
-                                        <option value="1">Jan</option>
-                                        <option value="2">Feb</option>
-                                        <option value="3">Mar</option>
-                                        <option value="4">Apr</option>
-                                        <option value="5">May</option>
-                                        <option value="6">Jun</option>
-                                        <option value="7">Jul</option>
-                                        <option value="8">Aug</option>
-                                        <option value="9">Sep</option>
-                                        <option value="10">Oct</option>
-                                        <option value="11">Nov</option>
-                                        <option value="12">Dec</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
                         <div class="table-responsive">
                             <table id="tbl_supplies" class="align-middle mb-0 table table-bordered table-striped table-hover">
                                 <thead>
@@ -352,8 +399,41 @@
                                         <th class="text-center">ID</th>
                                         <th class="text-center"></th>
                                         <th class="text-center">DESCRIPTION</th>
-                                        <th class="text-center">REMAINING MATERIALS</th>
-                                        <th class="text-center">REPLACEMENT MATERIALS</th>
+                                        <th class="text-center">1</th>
+                                        <th class="text-center">2</th>
+                                        <th class="text-center">3</th>
+                                        <th class="text-center">4</th>
+                                        <th class="text-center">5</th>
+                                        <th class="text-center">6</th>
+                                        <th class="text-center">7</th>
+                                        <th class="text-center">8</th>
+                                        <th class="text-center">9</th>
+                                        <th class="text-center">10</th>
+                                        <th class="text-center">11</th>
+                                        <th class="text-center">12</th>
+                                        <th class="text-center">13</th>
+                                        <th class="text-center">14</th>
+                                        <th class="text-center">15</th>
+                                        <th class="text-center">16</th>
+                                        <th class="text-center">17</th>
+                                        <th class="text-center">18</th>
+                                        <th class="text-center">19</th>
+                                        <th class="text-center">20</th>
+                                        <th class="text-center">21</th>
+                                        <th class="text-center">22</th>
+                                        <th class="text-center">23</th>
+                                        <th class="text-center">24</th>
+                                        <th class="text-center">25</th>
+                                        <th class="text-center">26</th>
+                                        <th class="text-center">27</th>
+                                        <th class="text-center">28</th>
+                                        <th class="text-center">29</th>
+                                        <th class="text-center">30</th>
+                                        <th class="text-center">31</th>
+                                        <th class="text-center">RESERVE</th>
+                                        <th class="text-center">DEPOSIT</th>
+                                        <th class="text-center">REMAINING</th>
+                                        <th class="text-center">REPLACEMENT</th>
                                     </tr>
                                 </thead>
                                 <tbody>
