fix: bad request Request Line is too large (8306 > 8190)

--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -19,8 +19,8 @@
             "dom": 'rtip',
             "processing": true,
             "autoWidth": false,
-            "serverSide": true,
             "info": false,
+            "paging": false,
             "pageLength": 500,
             "ajax": {
                 "url": "/learning-management/datatables/supplies/monthly-transactions",
@@ -49,7 +49,7 @@
             "dom": 'rtip',
             "processing": true,
             "autoWidth": false,
-            "serverSide": true,
+            "paging": false,
             "ajax": {
                 "url": "/learning-management/datatables/supplies/summary",
                 "data": function (d) {
