--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -142,7 +142,7 @@
                 {% if current_user.role.name in ['Admin', 'Secretary'] %}
                     <li id="header_dashboard" class="app-sidebar__heading">STORE</li>
                     <li>
-                        <a id="li_buy_items" href="{{url_for('lms.buy_items')}}" class="">
+                        <a id="li_buy_items" href="{{url_for('lms.store')}}" class="">
                             <i class="metismenu-icon pe-7s-calculator icon-gradient bg-premium-dark" aria-hidden="true"></i>
                             Buy Items
                         </a>
