enhance: 8c9ae0c24f2d4d1eb07cf696f543bcbb

--- a/prime_admin/templates/lms/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet.html
@@ -343,7 +343,11 @@
                                 clearCreateModal();
                             },
                             error: function (data) {
-                                swal("Error Occured!", "Please refresh the page then try again!", "error");
+                                if (data.responseJSON == undefined){
+                                    swal("Error Occured!", "Please refresh the page then try again!", "error");
+                                } else {
+                                    swal(data.responseJSON.message, "Add expenses failed!", "error");
+                                }
                             },
                         });
                     }, 500);
