--- a/prime_admin/templates/lms/office_supplies_page.html
+++ b/prime_admin/templates/lms/office_supplies_page.html
@@ -30,10 +30,6 @@
                     d.supplies_type = "office_supplies";
                     d.branch = $("#btn_marketer_label").val();
                 },
-                "dataSrc": function(json){
-                    $("#fund_request_total").html(json.fundRequestTotal);
-                    return json.data;
-                }
             },
             "ordering": false,
             "order": [[0, 'asc']],
@@ -57,6 +53,10 @@
                     d.month = $("#filter_month").val();
                     d.supplies_type = "office_supplies";
                     d.branch = $("#btn_marketer_label").val();
+                },
+                "dataSrc": function(json){
+                    $("#fund_request_total").html(json.fundRequestTotal);
+                    return json.data;
                 }
             },
             "info": false,
@@ -263,7 +263,7 @@
                             <div class="widget-content-wrapper">
                                 <div class="widget-content-left">
                                     <div class="widget-heading">FUND REQUEST</div>
-                                    <div class="widget-subheading">Total Used</div>
+                                    <div class="widget-subheading">Total Price</div>
                                 </div>
                                 <div class="widget-content-right">
                                     <div class="widget-numbers text-success"><span id="fund_request_total">0</span></div>
