feat: 3b05ea561e7742eb88837c6d849e1f58

--- a/prime_admin/templates/lms/client_upgrade_modal.html
+++ b/prime_admin/templates/lms/client_upgrade_modal.html
@@ -171,6 +171,19 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-md-3 mb-3">
+                                    <div class="position-relative form-group">
+                                        <label class="">Reviewer</label>
+                                        <div>
+                                            <div class="custom-checkbox custom-control"><input onclick="return false;" type="checkbox" id="upgrade_reading" name="upgrade_reviewers" value="reading" class="custom-control-input"><label class="custom-control-label" for="upgrade_reading">
+                                                Reading
+                                            </label></div>
+                                            <div class="custom-checkbox custom-control"><input onclick="return false;" type="checkbox" id="upgrade_listening" name="upgrade_reviewers" value="listening" class="custom-control-input"><label class="custom-control-label" for="upgrade_listening">
+                                                Listening
+                                            </label></div>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="col-md-2 mb-3">
                                     <div class="position-relative form-group">
                                         <label for="upgrade_others" class="">Others</label>
